# book-store-be

./: .gitignore  Dockerfile  README.md  check_actual_columns.py  check_postgres_tables.py  pyproject.toml  q  requirements.txt
Ebook/: asgi.py  settings.py  wsgi.py
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
alembic/: env.py
alembic/versions/: 0325e6a6518f_add_fk_constraint_book_category.py  04e0d8fc93a8_cascade_book_cleanup.py  068f4aa45392_add_profile_image_column.py  0c21d60c6f52_add_shipped_at_delivered_at_tracking_id_.py  0f69daeb4379_updated_payment_model_for_guest.py  18173a865686_add_notifications_recipient_role_and_.py  1bf8a5b41199_add_soft_delete_to_book.py  1cdc3e5a41cb_create_ebookpurchase_table.py  21d761ab0a3a_fix_cover_image_and_sync_models.py  24012c3dc284_add_delivered_at_to_order_model.py  240dc5e90ab6_add_payments_table.py  2e713e304f9e_add_ebook_fields_to_book_and_ebook_.py  333869bf6255_updated_order_model_for_guest_order_id.py  3ad592b323a4_add_book_title_and_price_to_cartitem.py  3b4deaaf3474_updated_order_model_for_guest.py  3dfc0208ceeb_add_updated_at_to_review.py  45d471191360_added_pdf_key_to_book_and_ebook_table.py  497c3e9cd6f0_sync_payment_model_with_database.py  4bc06a8ba96a_cascade_delete_reviews.py  53831d44a75b_add_social_links_table.py  5492a0cb6858_add_payments_table.py  623a7270dc3a_add_payment_expiry_and_reminder_fields.py  654609c4bcc9_remove_tax_column.py  (+30 more)
app/: config.py  database.py  google_auth.py  main.py  notifications.py
bruno/: README.md
(+336 files in other folders)
