[project]
name = "book-store-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt==4.0.1",
    "fastapi>=0.122.0",
    "google-auth>=2.43.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "python-slugify==8.0.1",
    "reportlab>=4.4.5",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.6",
    "apscheduler>=3.11.2",
    "razorpay>=2.0.0",
    "slowapi>=0.1.9"
]
